[tool.poetry]
name = "nataly-api"
version = "0.1.0"
description = ""
authors = ["Nataly"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
alembic = "^1.13.2"
pydantic = "^2.9.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
jwt = "^1.3.1"
PyJWT = "^2.9.0"
fastapi-mail = "^1.4.1"
jose = "^1.0.0"
psycopg2 = "^2.9.9"
slowapi = "^0.1.9"
cloudinary = "^1.41.0"
python-multipart = "^0.0.10"
pytest = "^8.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
